[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tests/CarTest/CarAI.gd" type="Script" id=2]
[ext_resource path="res://Tests/CarTest/Car.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37, 16 )

[node name="Car" type="Node2D"]
position = Vector2( 617, 344 )
script = ExtResource( 2 )

[node name="cast1" type="RayCast2D" parent="."]
position = Vector2( 7, 16 )
rotation = -0.523598
enabled = true
cast_to = Vector2( 0, 250 )

[node name="cast2" type="RayCast2D" parent="."]
position = Vector2( 23, 16 )
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 250 )

[node name="cast3" type="RayCast2D" parent="."]
position = Vector2( 31, 0 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 250 )

[node name="cast4" type="RayCast2D" parent="."]
position = Vector2( 23, -16 )
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 250 )

[node name="cast5" type="RayCast2D" parent="."]
position = Vector2( 7, -16 )
rotation = -2.61799
enabled = true
cast_to = Vector2( 0, 250 )

[node name="Car" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
